Implemented Nested property resolver.